# plylist

./: LICENSE  README.md  pyproject.toml  requirements-apple-music.txt  requirements-dev.txt  requirements.txt  setup.py
docs/: apple_music_cli_guide.md  apple_music_setup.md  troubleshooting_unauthorized.md
examples/: apple_music_integration.py  basic_usage.py
plylist/: __init__.py  __main__.py  manager.py
plylist/cli/: __init__.py  apple_music_commands.py  main.py
plylist/models/: __init__.py  playlist.py  track.py
plylist/storage/: __init__.py  json_storage.py
scripts/: diagnose_apple_music.html  generate_developer_token.py  get_apple_music_user_token.html  test_api_direct.py  verify_musickit_setup.py
tests/: __init__.py  test_integration.py  test_manager.py  test_models.py
